<resources>
    <string name="authority_package">com.app.travelapp</string>
    <string name="app_name">TravelApp</string>
    <!-- Strings related to field errors -->
    <string name="invalid_name">Not a valid full name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Username must be >5 characters and contain letters or numbers</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirmation_password">Passwords don\'t match</string>
    <string name="invalid_place_name">Invalid place name</string>
    <string name="invalid_place_description">Invalid place description</string>
    <string name="invalid_place_address">Invalid place address</string>
    <string name="invalid_place_picture">Place must have a picture</string>
    <!-- Strings related to result errors-->
    <string name="login_failed">Login failed</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="save_place_failed">Whoops!!!. An error occurred while saving place. Try again</string>
    <string name="update_place_failed">Whoops!!!. An error occurred while updating place. Try again</string>
    <string name="delete_place_failed">Whoops!!!. An error occurred while deleting place. Try again</string>

    <string name="welcome">Welcome</string>
    <!-- Strings related to fields -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_search_place">Search places by name</string>
    <string name="prompt_place_name">Place name</string>
    <string name="prompt_place_description">Description</string>
    <string name="prompt_place_address">Address</string>

    <!-- Strings related to buttons -->
    <string name="action_sign_in">Already a member? Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Don\'t have an account? Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_update">Update</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!-- Strings related to view titles -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="title_edit_post">Edit post</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_not_found">User not found</string>
    <string name="preference_file_key">preference file key</string>
    <string name="title_activity_main_admin">MainAdminActivity</string>
    <string name="title_users">Users</string>
    <string name="university">Instituto Tecnológico de Toluca</string>
    <string name="title_creditos">Creditos</string>
    <string name="student">Juan Camilo Velandia Botello</string>
    <string name="studen_label">Estudiante</string>
    <string name="professor_label">Profesor</string>
    <string name="profesor">M. en C. Rocio Elizabeth Pulido Alba</string>
    <string name="major_label">Carrera:</string>
    <string name="major">Ingeniería en Sistemas Computacionales</string>
    <string name="class_name">Desarrollo de Aplicaciones Móviles</string>
    <string name="class_label">Materia:</string>
    <string name="semester">Semestre: Enero - Junio</string>
    <string name="grupo">grupo: Sist-Tics</string>
    <string name="ciclo">Ciclo escolar 2020</string>
</resources>
