<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.creditos.CreditosActivity">

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="625dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/creditos_iv_tecnologico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/escudo" />

            <TextView
                android:id="@+id/creditos_tv_tecnologico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/university"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creditos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_creditos"
                android:textColor="#DF0A0A"
                android:textSize="36sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="398dp"
            android:layout_height="205dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creditos_tv_estudiante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studen_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creditos_tv_nombre_estudiante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student"
                />


            <TextView
                android:id="@+id/creditos_tv_profesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professor_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creditos_tv_nombre_profesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profesor" />

            <TextView
                android:id="@+id/creditos_tv_carrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/major_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creditos_tv_nombre_carrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/major" />

            <TextView
                android:id="@+id/creditos_tv_materia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creditos_tv_nombre_materia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="397dp"
            android:layout_height="33dp">

            <TextView
                android:id="@+id/creditos_tv_semestre"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:text="@string/semester" />

            <TextView
                android:id="@+id/creditos_tv_grupo"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:text="@string/grupo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creditos_tv_ciclo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ciclo"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>