<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_post.EditPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/edit_post_tv_place_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/prompt_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/edit_post_iv_place_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:src="@drawable/camera"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_post_et_place_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_place_description"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_post_et_place_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_place_address"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--RelativeLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/edit_post_layout_map">
                <com.google.android.gms.maps.MapView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_post_mv_map"
                    />
            </RelativeLayout-->

            <Button
                android:layout_margin="10dp"
                android:text="@string/action_update"
                android:enabled="false"
                android:id="@+id/edit_post_btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:textColor="#FFFFFF"/>

            <ProgressBar
                android:id="@+id/edit_post_pg_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="visible"
                app:layout_constraintVertical_bias="0.3" />

        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>