<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.add.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/add_iv_place_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="250dp"
                android:src="@drawable/camera"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_place_name"
                    android:inputType="text"
                    android:selectAllOnFocus="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_place_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_place_description"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_place_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_place_address"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--RelativeLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/add_layout_map">
                <com.google.android.gms.maps.MapView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/add_mv_map"
                    />
            </RelativeLayout-->

            <Button
                android:layout_margin="10dp"
                android:text="@string/action_save"
                android:enabled="false"
                android:id="@+id/add_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:textColor="#FFFFFF"/>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/add_pg_loading"
                app:layout_constraintTop_toBottomOf="@id/home_lv_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:visibility="gone">
            </androidx.core.widget.ContentLoadingProgressBar>

        </LinearLayout>

    </ScrollView>

</FrameLayout>