<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment"
    android:background="@color/colorAccent">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/layout_white"
                android:paddingBottom="20dp">
                <ImageView
                    android:id="@+id/profile_iv_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/user_icon"
                    />
                <TextView
                    android:id="@+id/profile_et_full_name"
                    android:gravity="center"
                    android:text="@string/prompt_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    style="@style/TextAppearance.MaterialComponents.Headline6"/>

                <TextView
                    android:id="@+id/profile_et_username"
                    android:text="@string/prompt_username"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/profile_et_email"
                    android:text="@string/prompt_email"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_rv_places_posted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="?attr/actionBarSize">
            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/profile_pg_loading"
                app:layout_constraintTop_toBottomOf="@id/home_lv_places"
                android:layout_width="match_parent"
                android:foregroundGravity="center_horizontal"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="#FFFFFF">
            </ProgressBar>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>